--- a/styles/app.scss
+++ b/styles/app.scss
@@ -14,7 +14,8 @@ body {
 }
 
 .container {
-	max-width: 980px;
-	width: 100%;
+	max-width: 800px;
+	width: 90%;
 	margin: 0 auto;
+	padding: 1em 0;
 }
