--- a/styles/app.scss
+++ b/styles/app.scss
@@ -7,10 +7,32 @@
 	line-height: normal;
 }
 
+html { background: #E8E7E3; }
+
 body {
 	background: #FFF;
+	border-radius: 4px;
+	color: #333;
 	font-family: 'Lato', sans-serif;
 	font-size: 16px;
+	margin: 1em;
+	height: 95vh;
+}
+
+.site-title {
+	font-size: 1em;
+	font-weight: 700;
+	letter-spacing: 2px;
+	margin: 2em 0 1em 0;
+	text-transform: uppercase;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+	&:hover {
+		text-decoration: underline;
+	}
 }
 
 .container {
@@ -18,4 +40,53 @@ body {
 	width: 90%;
 	margin: 0 auto;
 	padding: 1em 0;
+}
+
+.form-field {
+	border: 1px solid #ddd;
+	border-radius: 5px;
+	font-size: 1em;
+	margin: 0.5em 2% 0.5em 0;
+	padding: 1em;
+	width: 78%;
+
+	@media (max-width: 500px) {
+		width: 100%;
+	}
+}
+
+.button {
+	background: #222;
+	border-radius: 3px;
+	color: #FFF;
+	display: inline-block;
+	padding: 0.5em 1em;
+	text-align: center;
+
+	&.add-task-button {
+		text-decoration: none;
+		padding: 1em;
+		width: 20%;
+		&:hover { background: darken(#222, 3%); }
+		@media (max-width: 500px) { width: 100%; }
+	}
+
+	@media (max-width: 500px) {
+		width: 100%;
+	}
+}
+
+.task {
+	border-bottom: 1px solid #ddd;
+	display: flex;
+	padding-bottom: 1em;
+	margin-top: 1em;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 100%;
+}
+
+.post-action {
+	color: #aaa;
+	font-weight: 300;
 }
